--- a/templates/globals/footer.tmpl
+++ b/templates/globals/footer.tmpl
@@ -1,7 +1,13 @@
 {{ define "globals/footer.tmpl" }}
-<footer>
-	<p>
-	copyright by test {{ .Title }}
-	</p>
-</footer>
+<section id="footer">
+	<div class="container">
+		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+			<div class="col-md-4 d-flex align-items-center">
+				<span class="mb-3 mb-md-0 text-body-secondary">© 2023 Design by William Pangiawan</span>
+			</div>
+		</footer>
+	</div>
+</section>
+
+{{ template "static/js.tmpl" }}
 {{ end }}
