--- a/templates/globals/header.tmpl
+++ b/templates/globals/header.tmpl
@@ -1,7 +1,9 @@
 {{ define "globals/header.tmpl" }}
-<header>
-	<h1>{{ .Title }}</h1>
-	<a href="/">Home</a>
-	<a href="/users/">User</a>
-</header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Entry | {{ .Title }}</title>
+
+    {{ template "static/css.tmpl" }}
+</head>
 {{ end }}
