--- a/templates/users/users.tmpl
+++ b/templates/users/users.tmpl
@@ -1,23 +1,37 @@
 {{ define "users/users.tmpl" }}
 <html>
-    <head>
-        <title>{{ .Title }}</title>
-
-        {{ template "static/bootstrap-css.tmpl" }}
-    </head>
     {{ template "globals/header.tmpl" .}}
     <body>
-        <div>
-            {{ range .UserData }}
-                Name: {{ .Name }}<br/>
-                Address: {{ .Address }}<br/>
-                Email: {{ .Email }}<br/>
-                Phone Number: {{ .PhoneNumber }}<br/>
-            {{ end }}
-        </div>
-        {{ template "globals/footer.tmpl" .}}
+        {{ template "globals/navbar.tmpl" .}}
 
-        {{ template "static/bootstrap-js.tmpl" }}
+        <div class="container">
+            <input type="text" id="tableSearchInput" onkeyup="searchTable()" placeholder="Search keyword..">
+            
+            <table id="dataTable" class="table">
+                <thead class="table-dark">
+                    <tr>
+                        <th onclick="sortTable(0)">ID</th>
+                        <th onclick="sortTable(1)">Name</th>
+                        <th onclick="sortTable(2)">Address</th>
+                        <th onclick="sortTable(3)">Email</th>
+                        <th onclick="sortTable(4)">Phone Number</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{ range .UserData }}
+                    <tr>
+                        <td>{{ .ID }}</td>
+                        <td>{{ .Name }}</td>
+                        <td>{{ .Address }}</td>
+                        <td>{{ .Email }}</td>
+                        <td>{{ .PhoneNumber }}</td>
+                    </tr>
+                    {{ end }}
+                </tbody>
+            </table>
+        </div>
+
+        {{ template "globals/footer.tmpl" .}}
     </body>
 </html>
 {{ end }}
