--- a/templates/globals/navbar.tmpl
+++ b/templates/globals/navbar.tmpl
@@ -9,16 +9,16 @@
         <ul class="nav nav-pills">
             <li class="nav-item">
                 <a href="/"
-                class="nav-link {{ if eq .Title "Home" }} active {{ end }}"
-                {{ if eq .Title "Home" }} aria-current="page" {{ end }}>
-                    Home
+                class="nav-link {{ if eq .Title "Beranda" }} active {{ end }}"
+                {{ if eq .Title "Beranda" }} aria-current="page" {{ end }}>
+                    Beranda
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/users"
-                class="nav-link {{ if eq .Title "Users" }} active {{ end }}"
-                {{ if eq .Title "Users" }} aria-current="page" {{ end }}>
-                    Users
+                class="nav-link {{ if eq .Title "Pelanggan" }} active {{ end }}"
+                {{ if eq .Title "Pelanggan" }} aria-current="page" {{ end }}>
+                    Pelanggan
                 </a>
             </li>
         </ul>
