--- a/templates/users/users.tmpl
+++ b/templates/users/users.tmpl
@@ -5,6 +5,13 @@
         {{ template "globals/navbar.tmpl" .}}
 
         <div class="container">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+                <h1 class="h2">Daftar Pelanggan</h1>
+                <div class="btn-toolbar mb-2 mb-md-0">
+                    <button type="button" class="btn btn-primary btn-80-bright" onclick="window.location.href='/users/create'">Tambah Pelanggan</button>
+                </div>
+            </div>
+
             <input type="text" id="tableSearchInput" onkeyup="searchTable()" placeholder="Search keyword..">
             
             <table id="dataTable" class="table">
