Add Updating user capability and 404 page

--- a/templates/users/create.tmpl
+++ b/templates/users/create.tmpl
@@ -5,7 +5,7 @@
         {{ template "globals/navbar.tmpl" .}}
 
         <div class="container">
-            <h2>Tambah Pelanggan</h1>
+            <h2>Ubah Data Pelanggan</h1>
             <form id="create-user-form" onsubmit="submitCreateUserForm(event)">
                 <div class="form-group">
                     <label for="name">Nama:</label>
