--- a/templates/users/users.tmpl
+++ b/templates/users/users.tmpl
@@ -6,9 +6,9 @@
 
         <div class="container">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-                <h1 class="h2">Daftar Pelanggan</h1>
+                <h1 class="h2">User List</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
-                    <button type="button" class="btn btn-primary btn-80-bright" onclick="window.location.href='/users/create'">Tambah Pelanggan</button>
+                    <button type="button" class="btn btn-primary btn-80-bright" onclick="window.location.href='/users/create'">Add New User</button>
                 </div>
             </div>
 
@@ -18,10 +18,10 @@
                 <thead class="table-dark">
                     <tr>
                         <th onclick="sortTable(0,'int')">ID</th>
-                        <th onclick="sortTable(1,'string')">Nama</th>
-                        <th onclick="sortTable(2,'string')">Alamat</th>
+                        <th onclick="sortTable(1,'string')">Name</th>
+                        <th onclick="sortTable(2,'string')">Address</th>
                         <th onclick="sortTable(3,'string')">Email</th>
-                        <th onclick="sortTable(4,'string')">Nomor Telepon</th>
+                        <th onclick="sortTable(4,'string')">Phone Number</th>
                         <th></th>
                     </tr>
                 </thead>
