--- a/templates/globals/navbar.tmpl
+++ b/templates/globals/navbar.tmpl
@@ -9,16 +9,16 @@
         <ul class="nav nav-pills">
             <li class="nav-item">
                 <a href="/"
-                class="nav-link {{ if eq .Page "Beranda" }} active {{ end }}"
-                {{ if eq .Page "Beranda" }} aria-current="page" {{ end }}>
-                    Beranda
+                class="nav-link {{ if eq .Page "Home" }} active {{ end }}"
+                {{ if eq .Page "Home" }} aria-current="page" {{ end }}>
+                    Home
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/users"
-                class="nav-link {{ if eq .Page "Pelanggan" }} active {{ end }}"
-                {{ if eq .Page "Pelanggan" }} aria-current="page" {{ end }}>
-                    Pelanggan
+                class="nav-link {{ if eq .Page "Users" }} active {{ end }}"
+                {{ if eq .Page "Users" }} aria-current="page" {{ end }}>
+                    Users
                 </a>
             </li>
         </ul>
