--- a/templates/users/update.tmpl
+++ b/templates/users/update.tmpl
@@ -5,14 +5,14 @@
         {{ template "globals/navbar.tmpl" .}}
 
         <div class="container">
-            <h2>Tambah Data Pelanggan</h1>
+            <h2>Update User</h1>
             <form id="update-user-form" onsubmit="submitUpdateUserForm({{ .UserData.ID }},event)">
                 <div class="form-group">
-                    <label for="name">Nama:</label>
+                    <label for="name">Name:</label>
                     <input type="text" class="form-control" id="name" name="name" value="{{ .UserData.Name }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="address">Alamat:</label>
+                    <label for="address">Address:</label>
                     <input type="text" class="form-control" id="address" name="address" value="{{ .UserData.Address }}" required>
                 </div>
                 <div class="form-group">
@@ -20,11 +20,11 @@
                     <input type="email" class="form-control" id="email" name="email" value="{{ .UserData.Email }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumber">Nomor Telepon:</label>
+                    <label for="phoneNumber">Phone Number:</label>
                     <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" value="{{ .UserData.PhoneNumber }}" required>
                 </div>
                 <br/>
-                <button type="submit" class="btn btn-primary">Ubah Data</button>
+                <button type="submit" class="btn btn-primary">Update User</button>
             </form>
         </div>
 
